Fix overlapse on carousel in index.html

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -491,7 +491,6 @@ section h3 {
 
 #experience .expFS {
 	background: #85B807;
-	background-repeat: repeat-x;
 }
 
 #experience .expBYUI {
